2007-09-15  Andrés G. Aragoneses <knocte@gmail.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs: align
	message style with rest of similar messages.
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: fix typo.
	* MonoDevelop.Ide.addin.xml: corrected bogus label, for l10n.
	* gtk-gui/gui.stetic: Fix typo in message, don't translate "page#" or "button#"
	texts, removed bogus labels from l10n.
	* MonoDevelop.Ide.mdp: Replace Gtk#2.10 with 2.8 references.

2007-09-15  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs (IdeApp.Initialized): Rename this property
	to IsInitialized. And add new event named Initialized.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.DeleteFileDialog.cs,
	  gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ExportProjectDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ReplaceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.CodeGenerationPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.OpenFileInSolutionDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.AddinLoadErrorDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.CodeTemplates.CodeTemplatePanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeFilesDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.ExternalToolPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs,
	  gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ReplaceInFilesDialog.cs,